project config update

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,8 @@
     "rules" : {
         "no-unused-vars" : 2,
         "no-undef" : 2
+    },
+    "parserOptions": {
+        "sourceType": "module"
     }
 }
