--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,4 @@
 {
-    "ecmaFeatures": {
-        "modules": true,
-        "spread" : true,
-        "restParams" : true
-    },
     "env" : {
         "browser" : true,
         "node" : true,
@@ -11,9 +6,20 @@
     },
     "rules" : {
         "no-unused-vars" : 2,
-        "no-undef" : 2
+        "no-undef" : 2,
+        "valid-typeof" : 2,
+        "valid-jsdoc" : 2,
+        "no-unreachable" : 2,
+        "dot-notation" : 2,
+        "no-magic-numbers" : 2,
+        "no-redeclare" : 2,
+        "no-unused-labels" : 2,
+        "yoda" : 2,
+        "no-var" : 2,
+        "prefer-arrow-callback" : 2,
     },
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 6
     }
 }
