--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "babel-core": "^6.25.0",
     "es6-module-loader": "^0.17.11"
   },
   "devDependencies": {
