--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@af-modules/databinding": "^1.2.0-dev.9",
+    "@webcomponents/webcomponentsjs": "^1.0.20",
+    "application-frame": "^0.7.0-dev.3",
     "babel-core": "^6.25.0",
-    "es6-module-loader": "^0.17.11"
+    "es6-module-loader": "^0.17.11",
+    "gulp-bundle-templates": "^1.0.6"
   },
   "devDependencies": {
-    "babel-loader": "^6.2.1",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.1.18",
     "del": "^3.0.0",
     "event-stream": "^3.3.2",
@@ -21,8 +25,11 @@
     "gulp-indent": "^1.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-sourcemaps": "^2.2.3",
+    "jsdom": "^11.5.1",
     "run-sequence": "^1.1.5",
-    "webpack": "^1.12.12"
+    "tern": "^0.21.0",
+    "tern-lint": "git+https://github.com/angelozerr/tern-lint.git",
+    "webpack": "^3.8.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
