--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "application-frame": "^0.7.0-dev.3",
     "babel-core": "^6.25.0",
     "es6-module-loader": "^0.17.11",
-    "gulp-bundle-templates": "^1.0.6"
+    "gulp-bundle-templates": "^1.0.6",
+    "gulp-rename": "^1.2.2",
+    "html-loader": "^0.5.5",
+    "systemjs": "^0.21.2",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^4.0.3"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.1.18",
     "del": "^3.0.0",
+    "eslint": "^4.19.1",
     "event-stream": "^3.3.2",
     "glob": "^7.1.1",
     "gulp": "^3.9.0",
