rebrand to Workbox

--- a/src/packages/workbox.about/manifest.json
+++ b/src/packages/workbox.about/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "system.js.about",
+    "name": "workbox.about",
 
     "resources": {
         "icons/about-icon.png": "theme://about.svg"
