--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-loader": "^0.5.5",
     "subworkers": "^1.0.0",
     "systemjs": "^0.21.2",
+    "text-loader": "0.0.1",
     "uuid": "^3.2.1",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^4.0.3"
