--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "@af-modules/databinding": "^1.2.0-dev.12",
+    "@af-modules/databinding": "^1.2.0",
     "@webcomponents/webcomponentsjs": "^1.0.20",
-    "application-frame": "^0.7.0-dev.5",
+    "application-frame": "^1.0.0",
     "babel-core": "^6.25.0",
     "es6-module-loader": "^0.17.11",
     "gulp-bundle-templates": "^1.0.6",
     "gulp-rename": "^1.2.2",
     "html-loader": "^0.5.5",
+    "natives": "^1.1.6",
     "subworkers": "^1.0.0",
     "systemjs": "^0.21.2",
     "text-loader": "0.0.1",
